[package]
name = "help-me-format-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-secretsmanager = "0.19.0"
aws-sdk-sns = "0.19.0"
aws_lambda_events = "0.7.0"
headers = "0.3.8"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
lambda_runtime = "0.6.1"
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
